--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Proza+Libre:500,700|Yatra+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <title>Real estate app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
